@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed documentation for Fl_Progress (STR #2209)
 	- Fluid printing used wrong colors under Windows (STR #2195)
 	- Updated documentation for Fl_Input_
 	- Fixed fl_draw_image to obey the alpha channel, hoping that 
